--- a/br-frontend/src/App.css
+++ b/br-frontend/src/App.css
@@ -2,4 +2,47 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  font-family: sans-serif;
+}
+
+.header {
+  display: flex;
+  justify-content: space-evenly;
+  height: 5rem;
+  background-color: black;
+  align-items: center;
+  color: #fff;
+}
+
+.header a {
+  text-decoration: none;
+  color: #fff;
+}
+
+.header h1 {
+  font-size: 3rem;
+  font-weight: bold;
+}
+
+.header a:hover {
+  color: red;
+}
+
+.header button {
+  border: none;
+  border-radius: 15px;
+  padding: 0.8rem 1.4rem;
+  background-color: blue;
+  color: #fff;
+  font-size: 1.2rem;
+}
+
+.header .header-nav {
+  width: 60%;
+  text-align: center;
+}
+
+.header .header-nav a {
+  margin: 0 1.5rem;
+  font-size: 1.2rem;
 }
