--- a/br-frontend/src/App.css
+++ b/br-frontend/src/App.css
@@ -17,6 +17,12 @@ body {
   color: #fff;
 }
 
+p {
+  font-size: 1.3rem;
+  line-height: 1.8rem;
+  font-weight: bold;
+}
+
 .left {
   text-align: left;
 }
@@ -193,22 +199,19 @@ body {
 }
 
 .home-service-container p {
-  font-size: 1.4rem;
-  line-height: 1.8rem;
   margin: 1.5rem 0;
 }
 
 .home-service-container .service-img,
-.service-container .service-img {
+.service-container .service-img,
+.review-container .review-img
+ {
   height: 350px;
   width: 500px;
   object-fit: cover;
   object-position: center center;
   align-self: center;
   border-radius: 5px;
-}
-
-.service-container .service-img {
   margin: 2rem;
 }
 
@@ -292,3 +295,18 @@ body {
   no-repeat center center/cover;
 }
 
+.review-container {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  margin: auto;
+  align-items: center;
+  text-align: center;
+}
+
+
+
+.review-container .images-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
