reformating gets from api

--- a/br-frontend/src/App.css
+++ b/br-frontend/src/App.css
@@ -37,14 +37,16 @@ p {
   padding: .5rem 1rem;
   margin-bottom: 1rem;
   border-radius: 15px;
+  font-size: 1rem;
 }
 
 .error-message {
   background-color: #c1121f;
-  color: #370617;
+  color: #fff;
   padding: .5rem 1rem;
   margin-bottom: 1rem;
   border-radius: 15px;
+  font-size: 1rem;
 }
 
 .btn-primary {
@@ -194,7 +196,7 @@ p {
 
 .home-service-container h3 {
   font-size: 3rem;
-  color: #c1121f;
+  /* color: #c1121f; */
   font-weight:900;
 }
 
