--- a/br-frontend/src/App.css
+++ b/br-frontend/src/App.css
@@ -70,7 +70,7 @@ img {
 
 .main-container {
   width: 85%;
-  margin: auto;
+  margin: 10rem auto;
 }
 
 .header {
@@ -79,7 +79,11 @@ img {
   height: 9rem;
   /* background-color: black; */
   align-items: center;
-  position: relative;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 2;
 }
 
 .header .header-logo {
@@ -130,9 +134,10 @@ img {
 }
 
 .hero .hero-content {
-  height: 89vh;
-  width: 80%;
+  height: 100vh;
+  width: 60%;
   margin: auto;
+  padding-top: 5rem;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -151,6 +156,10 @@ img {
 }
 
 /* Contact */
+
+.contact-container {
+  margin-top: 10rem;
+}
 
 .contact-container .contact-title {
   text-align: center;
