--- a/br-frontend/src/App.css
+++ b/br-frontend/src/App.css
@@ -7,6 +7,11 @@
   font-family: 'Roboto', sans-serif;
 }
 
+h2, h3, h4 {
+  font-size: 2rem;
+  margin: 1rem 0;
+}
+
 a {
   text-decoration: none;
   color: #fff;
@@ -141,8 +146,18 @@ button {
 }
 
 .header .header-nav {
-  width: 60%;
+  width: 50%;
   text-align: center;
+}
+
+.header .header-login {
+  margin: auto;
+  text-align: center;
+  line-height: 3rem;
+}
+
+.header .header-login h2 {
+  font-size: 1.2rem;
 }
 
 .header .header-nav a {
